[package]
name = "DownloadManager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["stream", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
